[package]
name = "tuga"
version = "0.1.0"
authors = ["Allan Jorge"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.4"
scraper = { git = "https://github.com/causal-agent/scraper"}
reqwest = { version = "0.10.4" }
select = {version = "0.4.3"}
regex = "1"
